# protein-io

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  LICENSE  README.md  render.yaml
.superpowers/brainstorm/28131-1782115393/content/: layout.html  nav.html  sidebar-workflow.html
.superpowers/brainstorm/28131-1782115393/state/: server-stopped
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  antibody.py  batch.py  chat.py  clashes.py  cli.py  clustering.py  comparison.py  confidence.py  contact_classification.py  contacts.py  csv_export.py  dockq.py  interaction_classifier.py  interface_confidence.py  interfaces.py  lddt.py  main.py  models.py  pae.py  parser.py  pockets.py  routes.py  sasa.py  secondary_structure.py  service.py  trust_score.py
backend/app/integrations/: alphafold.py  boltz.py  chai.py  chembl.py  chemistry.py  foldseek.py  rcsb.py  tmalign.py  uniprot.py
backend/tests/: test_alphafold.py  test_antibody.py  test_batch.py  test_chemistry.py  test_clashes.py  test_cli.py  test_clustering.py  test_comparison.py  test_confidence.py  test_confidence_annotation.py  test_contact_classification.py  test_contacts.py  test_dockq.py  test_interaction_classifier.py  test_interface_confidence.py  test_interfaces.py  test_lddt.py  test_pae.py  test_parser.py  test_pockets.py  test_rcsb.py  test_routes.py  test_sasa.py  test_secondary_structure.py  test_trust_score.py  test_uniprot.py  test_water_bridges.py
clients/python/: README.md  pyproject.toml
clients/python/proteinio/: __init__.py  client.py
clients/python/tests/: test_client.py
docs/: ACTION_PLAN.md  BUILD_LOG.md  CODEX_RULES.md  DECISIONS.md  DEPLOYMENT.md  GIT_WORKFLOW.md  IMPLEMENTATION_GUIDELINES.md  LEARNING_NOTES.md  MANUAL_QA.md  MVP_SCOPE.md  PERFORMANCE_BASELINE.md  PRODUCT_DIRECTION.md  PROJECT_MEMORY.md  RELEASE_PLAN.md  ROADMAP-2026.md  ROADMAP.md  architecture.md  biology_notes.md
docs/reference/: README.md  api.md  architecture.md  dependencies.md  features.md  methods.md  modules.md
docs/superpowers/plans/: 2026-06-22-explore-workspace-polish.md  2026-06-22-workbench-redesign.md  2026-06-25-protein-io-roadmap.md
docs/superpowers/specs/: 2026-06-22-workbench-redesign.md
examples/: sample.cif
examples/batch_sample/: 1PPE.cif  3HHB.cif
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: protein-workbench.tsx  structure-viewer.tsx
frontend/src/components/viewer/: StructureViewer.tsx
frontend/src/components/workbench/: BatchWorkspace.tsx  ChatWorkspace.tsx  CompareWorkspace.tsx  ExploreSidebar.tsx  LigandsWorkspace.tsx  ProteinWorkbench.tsx  TopNav.tsx  WorkbenchShell.tsx
frontend/src/components/workspace/: ChatDrawer.tsx  ContextPanel.tsx  StructureTray.tsx  (+1 more)
frontend/src/hooks/: useMediaQuery.ts  useTheme.ts
frontend/src/lib/: api.ts  campaignReport.ts  chat.ts  compareSession.ts  comparisonReport.ts  csv.ts  features.ts  fingerprint.ts  idbStorage.ts  methodsReport.ts  metricExplainers.ts  motion.ts  reviewVerdict.ts  savedRuns.ts  sessionBundle.ts  sessionExport.ts  types.ts  workspaceStore.ts
scripts/: benchmark_analysis.py
