[project]
name = "protein-interaction-explorer-backend"
version = "0.1.0"
description = "FastAPI backend for protein interaction analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "gemmi>=0.7.5",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    # Physical-validity layer (Phase 9): CPU-only cheminformatics. Heavier than the
    # rest, but mandatory for drug-discovery credibility. See docs/ROADMAP-2026.md.
    "rdkit>=2024.9.1",
    "posebusters>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
protein-io = "app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
